# olivaw-slam

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
benches/: grid.rs  matcher.rs  preprocess.rs
documentation/: 01-overview.md  02-development-history.md  03-core-types.md  04-preprocessing.md  05-occupancy-grid.md  06-scan-matching.md  07-pose-graph.md  08-loop-closure.md  09-slam-orchestrator.md  10-testing-and-benchmarks.md  11-pitfalls-and-lessons.md  12-roadmap.md  README.md
examples/: grid_from_recording.rs  scan_matching_viz.rs  slam_from_recording.rs  slam_live.rs
src/: convert.rs  error.rs  lib.rs  pose.rs  scan.rs  slam.rs
src/graph/: mod.rs
src/grid/: bresenham.rs  cellmath.rs  mod.rs  rerun_viz.rs
src/loop_closure/: mod.rs
src/matcher/: csm.rs  icp.rs  likelihood.rs  mod.rs  scan_to_map.rs  test_scenes.rs
src/preprocess/: mod.rs
tests/: grid_fixture_smoke.rs  m3500.rs  persistence.rs  pose_properties.rs  slam_circuit.rs
tests/common/: mod.rs
