[package]
name = "olivaw-slam"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "2D lidar SLAM in pure Rust — no ROS2, no C++ dependencies"
repository = "https://github.com/Project-Olivaw/olivaw-slam"
keywords = ["slam", "lidar", "robotics", "mapping"]
categories = ["science::robotics", "algorithms"]

[dependencies]
nalgebra = "0.34"
thiserror = "2"
factrs = "0.2"
kiddo = "5"
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
postcard = { version = "1", features = ["use-std"], optional = true }
rerun = { version = "0.34.1", optional = true }

[dev-dependencies]
olivaw-lidar = { path = "../olivaw-lidar" }
approx = "0.5"
proptest = "1"
criterion = "0.5"

[features]
default = ["std"]
std = []
parallel = ["dep:rayon"]
serialize = ["dep:serde", "dep:postcard", "nalgebra/serde-serialize"]
viz = ["dep:rerun"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
float_cmp = "warn"
indexing_slicing = "warn"

[[example]]
name = "grid_from_recording"
required-features = ["viz"]

[[example]]
name = "scan_matching_viz"
required-features = ["viz"]

[[example]]
name = "slam_from_recording"
required-features = ["viz"]

[[example]]
name = "slam_live"
required-features = ["viz"]

[[bench]]
name = "preprocess"
harness = false

[[bench]]
name = "grid"
harness = false

[[bench]]
name = "matcher"
harness = false
